--- a/public/documentation/foundation/colors.html
+++ b/public/documentation/foundation/colors.html
@@ -610,7 +610,7 @@
                   <div class="prop-item-wrap">
                     <div class="prop-item">
                       <div class="label">Hex</div>
-                      <div class="value">#e91e63</div>
+                      <div class="value">#03a9f4</div>
                     </div>
                   </div>
                 </div>
